# narutomobile

./: README.md  pyproject.toml  requirements.txt  test.py
agent/: __init__.py  main.py
agent/core/: constants.py  game_constants.py  pipeline_names.py
agent/custom/: __init__.py  action.py  reco.py  sink.py  utils.py
agent/infrastructure/: __init__.py  _config.py  action_decorators.py  cleanup.py  common.py  config_patch.py  counter.py  input.py  logger.py  notification.py  ocr.py  retry.py  screenshot.py  swipe_search.py  types.py
agent/utils/: __init__.py  counter.py
assets/: Changelog.md  interface.json
assets/resource/base/pipeline/: Advanture.json  Easy_helper.json  Easy_season.json  Group.json  Headhunt.json  Hundred_ninja.json  Joy_club.json  Liveness_award.json  Mission_office.json  More_gameplay.json  Naruto_club.json  Nindao_clash.json  Ninja_book.json  Rebel_ninja.json  Routine.json  Secret_realm.json  Share.json  SharedNode.json  Startup.json  Switch_account.json  Team_dash.json  Weekly_win.json  get_aoyi_picture.json  practice_place_shugyou_no_michi.json  practice_place_survival_challenge.json
docs/develop/: agent.md  index.md
tests/: conftest.py  test_action.py  test_cleanup.py  test_common.py  test_config_patch.py  test_main.py  test_reco.py  test_retry.py
tools/: download_maafw.py  install_dev.py  maafw_version.py
tools/ci/: configure.py  download_deps.py  install.py  paths.py
