[project]
name = "maaautonaruto"
version = "1.1.13"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "json-with-comments>=1.2.10",
    "loguru>=0.7.3",
    "maafw>=5.10.4",
    "notify-py>=0.3.2",
    "pillow>=12.0.0",
    "pydantic>=2.0",
]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.12"

[tool.pytest.ini_options]
pythonpath = ["agent"]
